updating ui and backend
